fix: NoSuchMethodException 처리 추가